# flo-engine

./: .gitignore  .gitmodules  CMakeLists.txt  EngineVS.sln  README.md
Engine/: CMakeLists.txt  Engine.cpp  Engine.vcxproj  Engine.vcxproj.filters  imgui.ini  main.cpp
Engine/Content/: Mesh.h
Engine/Core/Renderer/: RenderContext.cpp  RenderContext.h  VertexArray.cpp  VertexArray.h  renderable.h
Engine/Core/Renderer/Shader/: ShaderProgram.cpp  ShaderProgram.h
Engine/Core/Scene/: Camera3D.cpp  Mesh.cpp  Mesh.h  Mesh3D.cpp  Mesh3D.h  Object3D.cpp  Object3D.h
Engine/EngineContent/: Arrow.fbx  Cube.fbx  Landscape.fbx  OnlyWallTest.fbx  Plane.fbx  SimpleBuilding.fbx  SkySphere.fbx  Sphere.fbx  Triangle.fbx  brutalist.fbx  city.fbx  closedSpaceTest.fbx  coordinates.fbx  coordinates2.fbx  cubeArray.fbx  inertiaTest.fbx  inertiaTest_mass_center.fbx  temple.fbx  testSpheres.fbx
Engine/EngineContent/ComputeShader/: LowestPosFinder.glsl  SurfelAoApproximator.glsl  SurfelAoApproximatorParallelized.glsl  SurfelGenerator.glsl  SurfelInserter.glsl  SyncBuffers.glsl
Engine/EngineContent/Shader/: BasicEmissive.glsl  BasicGreen.glsl  BasicGrey.glsl  BasicSkySphere.glsl  DebugColorChangable.glsl  DefaultShader.glsl  DepthOnlyLightpassShader.glsl  GBuffers.glsl  GaussianGI.glsl  HandlerBlue.glsl  HandlerGreen.glsl  HandlerRed.glsl  NormalVisualizer.glsl  PBRLighting.glsl  PixelPickerPass.glsl  PostProcessing.glsl  SkySphere.glsl  SkySphereAtmosphericScattering.glsl  SurfelPass.glsl  TriangleVisualizer.glsl  TriplanarMapping.glsl  VoxelGI.glsl  VoxelVisualizer.glsl  WorldPosition.glsl  lightingTest.glsl  test.glsl  test2.glsl  testVisualizeDepthMap.glsl
Engine/Source/Content/: Material.h  Mesh.cpp  Mesh.h
Engine/Source/Core/CommonDataStructures/: StructBoundingBox.h  StructColorRange.h  StructMeshTriangleFilter.h  StructVertexArray.h  collider_intersection.h  collision_channel.h  irradiance_information.h  ray_cast_result.h  struct_collision.h  struct_intersection.h  surfel_irradiance_information.h
Engine/Source/Util/: AssetLoader.cpp  AssetLoader.h  BoundingBoxHelper.cpp  BoundingBoxHelper.h  RayIntersectionHelper.cpp  RayIntersectionHelper.h  Remesh.cpp  Remesh.h  StackedBB.cpp  StackedBB.h  angle_utils.cpp  angle_utils.h  math_util.cpp  math_util.h
Engine/Util/: AssetLoader.cpp  AssetLoader.h
(+228 files in other folders)
